Wed Feb 10 12:06:30 1999  Tim Janik  <timj@gtk.org>

	* gmodule.c (CHECK_ERROR): be more descriptive on unsupported systems.

Wed Feb 10 07:56:33 1999  Tim Janik  <timj@gtk.org>

	* gmodule.c (g_module_error): fixed errernerous code wrt to thread
	specific error string allocation handling.

Thu Jan 21 12:40:11 EST 1999  Jeff Garzik  <jgarzik@pobox.com>

        * gmodule-dl.c (_g_module_build_path):
        Add braces to eliminate an ambiguous else warning.

1999-01-16  Tor Lillqvist  <tml@iki.fi>

	* gmodule-dl.c gmodule-dld.c: In
 	_g_module_build_path, don't add the "lib" prefix and
 	".so" or ".sl" suffix if already there.

	* gmodule-win32.c: Likewise for the ".dll" suffix.

1998-12-10  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* gmodule.c: Made it MT safe, the g_module_error() is now thread
	specific.

Fri Nov 20 14:43:44 1998  Tim Janik  <timj@gtk.org>

	* gmodule.c (_g_module_build_path): added empty default imlementation
	so gmodule.so compiles on systems that are not yet supported, fix from
	Erik Bagfors <bagfors@hpc2n.umu.se>.

1998-11-13  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* Makefile.am (INCLUDES): The previous commit message is wrong
	about the -I$(top_srcdir) being redundant. I put it back.

Wed Nov 11 23:23:22 EST 1998 Jeff Garzik <jgarzik@pobox.com>

        * Makefile.am : INCLUDES is the right way to add to CFLAGS, not 
        DEFS.  Also there are bugs with '+=' in makefiles.
        Got rid of DEFS line by moving G_LOG_DOMAIN setting into INCLUDES.
        Removed redundant -I from INCLUDES.

Tue Oct 27 04:00:11 1998  Tim Janik  <timj@gtk.org>

	* testgmodule.c (main): changed the #ifdef WIN32 test to NATIVE_WIN32,
	this needs to be more constistent throughout the code, do we go for
	NATIVE_WIN32 or WIN32?

	* gmodule.c (LibMain): special cased the #ifdef __LCC__ case for
	NATIVE_WIN32, since lcc maybe used on other platforms as well.
	* libgplugin_a.c (LibMain): 
	* libgplugin_b.c (LibMain): 