@@ -29,6 +29,7 @@ extern "C" {
 #define	G_MODULE_IMPL_DL	1
 #define	G_MODULE_IMPL_DLD	2
 #define	G_MODULE_IMPL_WIN32	3
+#define	G_MODULE_IMPL_OS2	4
 
 #define	G_MODULE_IMPL		@G_MODULE_IMPL@
 #undef	G_MODULE_HAVE_DLERROR
